# batter_pose_detector

./: .gitignore  README.md  detect_batter.py  pyproject.toml  requirements.txt  test_detect_batter.py
