[project]
name = "batter-pose-detector"
version = "0.1.0"
description = "A tool for detecting batter poses in baseball videos"
authors = [
    {name = "James Rutledge"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "ultralytics (>=8.0.0,<9.0.0)",
    "opencv-python (>=4.8.0,<5.0.0)",
    "mediapipe (>=0.10.0,<0.11.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

