[tool.poetry]
name = "batter-pose-detector"
version = "0.1.0"
description = "A tool for detecting batter poses in baseball videos"
authors = ["James Rutledge"]
readme = "README.md"
packages = [{include = "detect_batter.py"}]

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.0.0"
opencv-python = "^4.8.0"
mediapipe = "^0.10.0"
numpy = "^1.24.0"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

